--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.1",
     "jquery": "^3.6.0",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.5.0",
